--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
     "devDependencies": {
+        "@popperjs/core": "^2.9.2",
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
+        "bootstrap": "^5.0.2",
         "core-js": "^3.0.0",
+        "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.35.2",
+        "sass-loader": "^12.0.0",
         "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -14,5 +19,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootswatch": "^5.0.2"
     }
 }
