--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,13 +4,15 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    cars_pictures_directory: '%kernel.project_dir%/public/uploads/cars/pictures'
+    pictures_path: '/uploads/pictures'
+    cars_pictures_path: '%pictures_path%/cars'
+    cars_pictures_directory: '%kernel.project_dir%/public%cars_pictures_path%'
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+            
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Admin\Controller\AdminController:
@@ -27,3 +29,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Service\ImageUploaderHelper:
+        arguments:
+            $root: '%cars_pictures_path%'
