--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootswatch": "^5.0.2"
+        "bootswatch": "^5.0.2",
+        "testcafe": "^1.15.1"
     }
 }
