frontoffice with edit informations and change password

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,6 +4,7 @@ twig:
         'assets/images': images
     globals:
         cars_pictures_path: '%cars_pictures_path%'
+    form_themes: ['bootstrap_4_layout.html.twig']
 
 when@test:
     twig:
