--- a/config/services.yaml
+++ b/config/services.yaml
@@ -17,6 +17,12 @@ services:
     # as action arguments even if you don't extend any base controller class
     App\Admin\Controller\AdminController:
         tags: ['container.service_subscriber']
+    App\Admin\Controller\MemberController:
+        tags: ['container.service_subscriber']
+    App\Admin\Controller\OrderController:
+        tags: ['container.service_subscriber']
+    App\Admin\Controller\VehicleController:
+        tags: ['container.service_subscriber']
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
